--- a/www/index.html
+++ b/www/index.html
@@ -2,33 +2,8 @@
 
 <!-- Include meta tag to ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Include jQuery Mobile stylesheets -->
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-
-<!-- Include the jQuery library -->
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-<!-- Include the jQuery Mobile library -->
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+<meta http-equiv="refresh" content="0; ,URL=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html">
 </head>
 <body>
-<div data-role="page">
-
-  <div data-role="header">
-    <h1>Welcome To My Homepage</h1>
-  </div>
-
-  <div data-role="main" class="ui-content">
-    <p>I Am Now A Mobile Developer!!</p>
-    <a href="
-https://m.facebook.com/profile.php?id=1494591927428217&tsid=0.25221241754479706&source=typeahead" class="ui-btn">Go Udaipurwale</a>
-  </div>
-
-  <div data-role="footer">
-    <h1>Footer Text</h1>
-  </div>
-
 </div>
 </body>
