--- a/www/index.html
+++ b/www/index.html
@@ -5,5 +5,10 @@
 <meta http-equiv="refresh" content="0; ,URL=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html">
 </head>
 <body>
-</div>
+<div data-role="main" class="ui-content">
+    <p>I Am Now A Mobile Developer!!</p>
+    <a href="https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html" class="ui-btn">
+      Load App
+      </a>
+  
 </body>
