--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 
 <!-- Include meta tag to ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="0; ,URL=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html">
+<!-- meta http-equiv="refresh" content="0; ,URL=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html" -->
 </head>
 <body>
 <div data-role="main" class="ui-content">
