--- a/www/index.html
+++ b/www/index.html
@@ -10,5 +10,8 @@
     <a href="https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html" class="ui-btn">
       Load App
       </a>
+      <script>
+      window.location.href = 'https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html';
+      </script>
   
 </body>
