--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
       Load App
       </a>
       <script>
-      window.location.href = 'https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html';
+      //window.location.href = 'https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html';
       </script>
   
 </body>
