--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    
+<META HTTP-EQUIV="refresh" CONTENT="0; url=http://www.google.com/">
+    
 <!-- Include meta tag to ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
