--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     
-<META HTTP-EQUIV="refresh" CONTENT="0; url=http://www.google.com/">
+<META HTTP-EQUIV="refresh" CONTENT="0; url=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html">
     
 <!-- Include meta tag to ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
