--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,21 @@
 <html>
 <head>
 <META HTTP-EQUIV="refresh" CONTENT="0; url=https://dl.dropboxusercontent.com/u/37567973/phonegap/phonegap-landing-page-1.html">
+  <style>
+  #mydiv {
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    width:200px;
+    height:200px;
+    margin-top: -100px; /*set to a negative number 1/2 of your height*/
+    margin-left: -100px; /*set to a negative number 1/2 of your width*/
+}
+  </style>
 </head>
 <body>
+  <div id="mydiv">
+    <img src="https://dl.dropboxusercontent.com/u/37567973/gmcwebtech/images/loading-gif-animation.gif" />
+  </div>
 </body>
 </html>
